# libFCT4-cross

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-universal.yml
FCT-cross/: CMakeLists.txt  FileParser.cpp  FileParser.h  libFCT-cross.cpp
FCT-cross/libFCT/: CMakeLists.txt  FSoperations.cpp  FctArchive.cpp  FctArchive.h  FileParser.cpp  FileParser.h  libFCT.h
libFCT-cross/: CMakeLists.txt  FSoperations.cpp  FSoperations.h  FctArchive.cpp  FctArchive.h  FileParser.cpp  FileParser.h  libFCT-cross.cpp
tests/: has_filesystem.cpp
